assets/css/style.css
body {
    margin: 0;
    padding: 0;
    background-image: url("../images/background.png");
}

h1 {
    font-family: 'Georgia', Times, Times New Roman, serif;
    font-size: 32px;
}

p {
    padding: 0 30px 0 30px;
    font-size: 18px;
    color: #777777;
    line-height: 2;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

.h1-below {
    padding: 30px 0 30px 0;
    color: #4aaaa5;
    border-bottom: 3px solid #dddddd;
    margin: 0 30px 30px 30px;
}

#profile-picture {
    padding: 0 30px 0 30px;
    float: left;
}

.container {
    width: 960px;
    margin: auto;
    padding-bottom: 20px;
    background-color: #ffffff;
    border: 2px solid #dddddd;
    position: relative;
    top: 130px;
}

.header-heading-container {
    float: left;
}

.header-heading {
    font-family: 'Georgia', Times, Times New Roman, serif;
    background-color: #4aaaa5;

    height: 92px;
    padding: 100% 30px 35px 30px;
    color: #ffffff;
}

.header-right {
    float: right;
    height: 54px;
    padding-top: 36px;
}

.header-text {
    width: 960px;
    margin: auto;
}

/*Have checked all code and made sure it serves a purpose up to this point*/
header {
    position: absolute;
    top: 0;
    bottom: auto;
    width: 100%;
    background: #ffffff;
    overflow: auto;
    border-bottom: 2px solid #cccccc;
    margin-bottom: 150px;
}

footer {
    background: #666666;
    position: absolute;
    bottom: 0;
    height: 65px;
    width: 100%;
    border-top: 7px solid #4aaaa5;
}

.copyright {
    text-align: center;
    font-size: 12px;
    color: #dddddd;
    margin-top: 38px;
}

.clearfix::after {
    content: "";
    display: block;
    height: 0;
    clear: both;
}

